Adding the microservices - email, order and stock

--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -1,6 +1,6 @@
 COMPOSE_PATH_SEPARATOR=:
-COMPOSE_FILE=common.yml:rabbitmq.yml
-; COMPOSE_FILE=common.yml:rabbitmq.yml:services.yml
+; COMPOSE_FILE=common.yml:rabbitmq.yml
+COMPOSE_FILE=common.yml:rabbitmq.yml:services.yml
 SERVICE_VERSION=1.0-SNAPSHOT
 GLOBAL_NETWORK=application
 GROUP_ID=blog.yrol
