--- a/stock-service/src/main/resources/application.properties
+++ b/stock-service/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-server.port=8080
+server.port=8081
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
+rabbitmq.queue.order.name=order_queue
 rabbitmq.exchange.name=order_exchange
 rabbitmq.binding.routing.key=order_routing_key
