--- a/email-service/src/main/resources/application.properties
+++ b/email-service/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=8081
+server.port=8888
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-rabbitmq.queue.order.name=order_queue
+rabbitmq.queue.email.name=email_queue
