--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 rabbitmq.exchange.name=order_exchange
-rabbitmq.binding.routing.key=order_routing_key
+rabbitmq.binding.order.routing.key=order_routing_key
+rabbitmq.binding.email.routing.key=email_routing_key
